kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cognitive-banking-backend
  namespace: cognitive-bank
  labels:
    app: cognitive-banking-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cognitive-banking-backend
  template:
    metadata:
      labels:
        app: cognitive-banking-backend
    spec:
      containers:
        - name: backend
          image: fulufhelom/cognitive-banking-application:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          # Load non-sensitive config and secrets
          readinessProbe:
            httpGet:
              path: /api/cognitive/bank/actuator/health/readiness
              port: 8080
            initialDelaySeconds: 180       # wait 3 minutes before first probe
            periodSeconds: 30              # check every 30s
            failureThreshold: 30           # 30 × 30s = 15 minutes max
            timeoutSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/cognitive/bank/actuator/health/liveness
              port: 8080
            initialDelaySeconds: 180       # wait 3 minutes before first probe
            periodSeconds: 30
            failureThreshold: 30           # 15 minutes tolerance
            timeoutSeconds: 5

          startupProbe:
            httpGet:
              path: /api/cognitive/bank/actuator/health
              port: 8080
            initialDelaySeconds: 120       # wait 2 minutes before first probe
            periodSeconds: 30              # check every 30s
            failureThreshold: 30           # 30 × 30s = 15 minutes max
            timeoutSeconds: 5

          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
