kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cognitive-banking-backend
  namespace: cognitive-bank
  labels:
    app: cognitive-banking-backend
spec:
  selector:
    app: cognitive-banking-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
