kubernetes/base/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cognitive-banking-backend-ingress
  namespace: cognitive-bank
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: cognitive-bank.local
      http:
        paths:
          - path: /api/cognitive/bank/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: cognitive-banking-backend
                port:
                  number: 80
  tls:
    - hosts:
        - cognitive-bank.local
      secretName: cognitive-bank-tls
